<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FuLiCenter</string>
    <string name="Version_number_is_wrong">Version number is wrong</string>
    <string name="now_refresh">now_refresh</string>
    <string name="no_more">no more</string>
    <string name="load_more">load more</string>

    <string name="new_goods">新品</string>
    <string name="boutique">精选</string>
    <string name="category">分类</string>
    <string name="cart">购物车</string>
    <string name="my_Center">me</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="goods_detail_top">商品详情</string>
    <string name="goods_des_detail">PP食品级材质，轻巧、易清洗、蠕变性小，不易变形，可置于微波炉加热，可方巾洗碗机清洗。双层色彩可以随意组合，轻巧方便。</string>
    <string name="boutique_title">不一样的新妆，不一样的美丽</string>
    <string name="boutique_description">快速增长修护预防脱发洗发水让头发健康快速生长更美丽</string>
    <string name="boutique_name">拯救头发，美丽新妆</string>

    <string name="cartegroy_child_price_button">价格</string>
    <string name="cartegroy_child_time_button">上架时间</string>

    <string name="account">用户名</string>
    <string name="password">密码</string>
    <string name="login">登      录</string>
    <string name="register_str">免费注册</string>
    <string name="register_nick">昵称</string>
    <string name="repassword">确认密码</string>
    <string name="register">免费注册</string>
    <string name="login_title">账户登录</string>
    <string name="login_username_isempty">acconut is empty!</string>
    <string name="login_nouser">no user</string>
    <string name="login_password_error">Password Error</string>
    <string name="login_fail">Login Fail</string>
    <string name="login_success">Login Success</string>
    <string name="loging">Login…</string>
    <string name="user_save_error">user save error</string>
    <string name="setting">Setting</string>
    <string name="confirm_password_connot_be_empty">confirm password is empty</string>
    <string name="confirmpassword">confirm password</string>
    <string name="illegal_user_name">Illegal account,must be first 6–16 number and word</string>
    <string name="nick_name_connot_be_empty">nick is not empty</string>
    <string name="nickname">nick</string>
    <string name="password_connot_be_empty">password is not empty</string>
    <string name="register_fail">register fail</string>
    <string name="register_fail_exists">username already exists</string>
    <string name="register_success">register success</string>
    <string name="registering">resgistering…</string>
    <string name="two_input_password">Enter the password twice</string>
    <string name="user_name">Account</string>
    <string name="user_name_connot_be_empty">Account is not empty</string>
    <string name="person_info">Person Information</string>
    <string name="user_avatar">Avatar</string>
    <string name="quit">quit</string>
    <string name="account_not_change">Account is not change</string>
    <string name="change_nick_title">Change Nick</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="nick_no_change">Nick no change</string>
    <string name="load">Load…</string>
    <string name="update_fail">Update Fail</string>
    <string name="update_nick_fail_unmodify">Nick fail unmodify</string>
    <string name="update_user_avatar_fail">Update fail</string>
    <string name="update_user_avatar_success">Update Success</string>
    <string name="collect_title">Collects</string>
    <string name="delete_fail">Delete Fail</string>
    <string name="delete_success">Del Success</string>
    <string name="collect_success">Collected</string>
    <string name="internet_error">Internet Error</string>
    <string name="settlement">Settle Acconut</string>
    <string name="add_cart_success">Add Success</string>
    <string name="pay">Confirm Pay</string>
    <string name="noGoods_choosed">Choose Empty</string>
    <string name="pay_title">Entry Address</string>
    <string name="receiver_name_isEmpty">Receiver Name is Empty</string>
    <string name="phone_valid">Phone Valid</string>
    <string name="phone_isEmpty">Phone is Empty</string>
    <string name="city_isEmpty">City is Empty</string>
    <string name="address_isEmpty">Address is Empty</string>


</resources>