<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.ucai.fulicenter.activity.LoginActivity">

    <include layout="@layout/white_title_image_text"/>

    <EditText
        android:id="@+id/login_account_editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:hint="@string/account"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:drawableRight="@drawable/icon_account"
        />
    <EditText
        android:id="@+id/login_password_editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:hint="@string/password"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:drawableRight="@drawable/icon_pwd"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/login_button"
        android:background="@color/good_detaul_flow_indicator_focus"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        />
    <Button
        android:id="@+id/register_button"
        android:background="#f1d134"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/register_str"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        />
</LinearLayout>
