<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/boutique_content_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <ImageView
        android:id="@+id/boutique_imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        tools:src="@drawable/nopic"
        android:scaleType="fitXY"/>
    <LinearLayout
        android:id="@+id/boutique_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:layout_toRightOf="@id/boutique_imageView"
        android:weightSum="1"
        >
        <TextView
            android:id="@+id/boutique_title_textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="center_vertical"
            tools:text="@string/boutique_title"
            android:textColor="@color/google_red"
            />
        <TextView
            android:id="@+id/boutique_name_textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="center_vertical"
            tools:text="@string/boutique_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/boutique_description_textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:gravity="center_vertical"
            tools:text="@string/boutique_description"
            android:textColor="@color/black"
            />
    </LinearLayout>
</RelativeLayout>