<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.ucai.fulicenter.activity.SettingsActivity">

    <include layout="@layout/white_title_image_text"/>

    <RelativeLayout
        android:id="@+id/person_setting_avatar_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white"
        >
        <TextView
            android:text="@string/user_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            />
        <ImageView
            android:id="@+id/person_setting_avatar_arrow"
            android:src="@drawable/right_arrow_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            />
        <ImageView
            android:id="@+id/person_setting_avatar_imageView"
            android:src="@drawable/contactlogo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/person_setting_avatar_arrow"
            android:layout_marginRight="10dp"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"
        />
    <RelativeLayout
        android:id="@+id/person_setting_account_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        >
        <TextView
            android:text="@string/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            />
        <ImageView
            android:id="@+id/person_setting_name_arrow"
            android:src="@drawable/right_arrow_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            />
        <TextView
            android:id="@+id/person_setting_account_textView"
            android:text="Elder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/person_setting_name_arrow"
            android:layout_marginRight="10dp"
            android:textSize="16dp"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"
        />
    <RelativeLayout
        android:id="@+id/person_setting_nick_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        >
        <TextView
            android:text="@string/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            />
        <ImageView
            android:id="@+id/person_setting_nick_arrow"
            android:src="@drawable/right_arrow_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            />
        <TextView
            android:id="@+id/person_setting_nick_textView"
            android:text="Elder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/person_setting_nick_arrow"
            android:layout_marginRight="10dp"
            android:textSize="16dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/person_setting_quit_button"
            android:text="@string/quit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/orange"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
</LinearLayout>
